fix y axis Navbar on mobiles

--- a/client/src/app/components/Navbar.module.css
+++ b/client/src/app/components/Navbar.module.css
@@ -7,6 +7,7 @@ html:has(header.OVERFLOWXHIDDEN) {
   overflow-x: hidden;
 }
 
-body:has(header.openedNavbar) {
+body:has(header.openedNavbar),
+html:has(header.openedNavbarw) {
   overflow-y: hidden;
 }
